--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
         <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
 
-        <link href="https://unpkg.com/tachyons@4.2.1/css/tachyons.min.css" rel="stylesheet"/>
+        <link href="%PUBLIC_URL%/css/tachyons.min.css" rel="stylesheet">
 
         <title>React App</title>
     </head>
